<resources>
    <string name="app_name">Guesture</string>
    <string name="login_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam erat sapien, ultricies.</string>
    <string name="login_image">login_image</string>
    <string name="guesture_icon">guesture_icon</string>
    <string name="next_btn">next button</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Login</string>
    <string name="username">Email or Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_yet">Don’t have an account yet?</string>
    <string name="get_one_now">Get one now.</string>
    <string name="login">LOGIN</string>
</resources>
